Fixes 2577: correct Feature object for openapi doc
